--- a/src/main/resources/static/list.html
+++ b/src/main/resources/static/list.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
 <meta charset="utf-8">
@@ -14,7 +14,7 @@
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
@@ -39,29 +39,32 @@
 		<!-- /.container-fluid -->
 	</nav>
 	<div class="container">
-		<form>
-			<div class="form-group">
-				<label for="userId">사용자 아이디</label> <input type="text"
-					class="form-control" id="userId" placeholder="사용자 아이디">
-			</div>
-			<div class="form-group">
-				<label for="password">Password</label> <input type="password"
-					class="form-control" id="password" placeholder="비밀번호">
-			</div>
-			<div class="form-group">
-				<label for="name">이름</label> <input type="text" class="form-control"
-					id="name" placeholder="이름">
-			</div>
-			<div class="form-group">
-				<label for="name">이메일</label> <input type="email"
-					class="form-control" id="email" placeholder="이메일">
-			</div>
-			<button type="submit" class="btn btn-default">Submit</button>
-		</form>
+		<table class="table table-condensed">
+			<caption>사용자 목록</caption>
+			<thead>
+				<tr>
+					<th>사용자 아이디</th>
+					<th>이름</th>
+					<th>이메일</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th scope="row">javajigi</th>
+					<td>자바지기</td>
+					<td>javajigi@slipp.net</td>
+				</tr>
+				<tr>
+					<th scope="row">sanjigi</th>
+					<td>산지기</td>
+					<td>sanjigi@slipp.net</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
-
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="/webjars/jquery/3.1.0/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
 </body>
+</html>
